[project]
name = "retry-engine"
version = "0.1.0"
description = "HTTP retry engine with exponential backoff and jitter"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.15",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
